# riot-rust-api

./: .gitignore  Cargo.toml  README.md  example.txt  kraken_check.txt  output.txt  seeds.txt
data/processed/: player_match.parquet
data/raw/kraken_absorb_test/: EUW1_6892865075.json  EUW1_6892931638.json  EUW1_6892969387.json  EUW1_6893033129.json  EUW1_7076749478.json  EUW1_7168499754.json  EUW1_7168542466.json  EUW1_7170101872.json  EUW1_7608398061.json  EUW1_7609376192.json  EUW1_7610713962.json  EUW1_7611914880.json  EUW1_7611967614.json  EUW1_7612026582.json  EUW1_7612037291.json  EUW1_7612277112.json  EUW1_7612750546.json  EUW1_7612759084.json  EUW1_7612769139.json  EUW1_7612774303.json  EUW1_7612801499.json  EUW1_7612832520.json  EUW1_7612939909.json  EUW1_7613104938.json  EUW1_7613171227.json  EUW1_7613205033.json  EUW1_7613374250.json  EUW1_7613411821.json  EUW1_7613465588.json  EUW1_7613525028.json  EUW1_7613536528.json  EUW1_7613801863.json  EUW1_7614125979.json  EUW1_7614128379.json  EUW1_7614137386.json  EUW1_7614142352.json  EUW1_7614152058.json  EUW1_7614177073.json  EUW1_7614183045.json  EUW1_7614209959.json  (+6 more)
data/raw/kraken_eat_test/: EUW1_7115980707.json  EUW1_7168443324.json  EUW1_7169382717.json  EUW1_7170102374.json  EUW1_7170626951.json  (+29 more)
models/: xgb_lobby_profile.json
scripts/: ign_to_puuid.sh  kraken_check.py  kraken_monitor.py  train_xgb_lobby.py  train_xgb_lobby_profile.py  train_xgb_team.py
src/: kraken.rs  kraken_prepare_ml.rs  kraken_summary.rs  main.rs  parquet_extract.rs  player_profile.rs  riot_api.rs  sniff.rs  stats.rs
