[package]
name = "riot-rust-api"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1


[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
polars = { version = "0.38", features = ["parquet", "lazy", "rank"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
